maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:39: error: not found: value estSurBisuit
  while (!estSurBisuit()) {
          ^